codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__open_interpreter_session_header_uses_product_name_without_border.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1548
expression: rendered
---

  Open Interpreter (vtest)
