codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__user_history_cell_numbers_multiple_remote_images.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
────────────────────────────────────────────────────────────────────────────────
  [Image #1]
  [Image #2]

› describe both
────────────────────────────────────────────────────────────────────────────────
